tests/NormalTests/paczka2/big_fuzzy/42860204.err
Error in line 4: 0mT S513 94,2
Error in line 3: ECMG S11 85,6
Error in line 13: bePuknNO52 S513 90,52
Error in line 10: ECMG A512 22,3
Error in line 18: bePuknNO52 S513 383,4
Error in line 31: ECMG S338 75,8
Error in line 45: jx9qL S338 76,0
Error in line 17: Jr7R8UjQwmY S11 6,2
Error in line 55: bePuknNO52 A512 33,h
Error in line 43: ECMG S338 56,7
Error in line 54: 0mT S338 70,8
Error in line 57: bePuknNO52 A512 71,1
Error in line 67: 0mT A512 66,6
Error in line 76: ECMG S11 19,8
Error in line 86: S513 S338 46,6
Error in line 87: S513 S513 46,2
Error in line 94: S513 S513 98,2
Error in line 100: 0mT S338 69,1
Error in line 107: 0mT S513 24,8
Error in line 113: Jr7R8UjQwmY S11 30,8
Error in line 112: 0mT S11 92,7
Error in line 118: uBM S338 3,01
Error in line 117: uBM S338 1,5
Error in line 116: 0mT A512 30,7
Error in line 121: jx9qL S11 52,0
Error in line 131: jx9qL S338 71,5
Error in line 145: jx9qL S11 81,2
Error in line 147: ECMG S11 42,6
Error in line 108: bePuknNO52 S11 64,1
Error in line 168: uBM S11 53,0
Error in line 177: Jr7R8UjQwmY S338 50,5
Error in line 175: S513 S513 13,4
Error in line 176: uBM S513 10,5
Error in line 211: ECMG A512 110,6
Error in line 214: uBM S11 71,6
Error in line 219: Jr7R8UjQwmY S11 186,6
Error in line 229: ECMG A512 34,7
Error in line 225: jx9qL S513 45,6
Error in line 232: S513 S338 76,5
Error in line 207: 0mT S513 266,9
